--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="change_city">Change city</string>
 
     <!-- Put your own APP ID here -->
-    <string name="open_weather_maps_app_id">xxidrzxx</string>
+    <string name="open_weather_maps_app_id">06abd15896d509385ac76db279aab61b</string>
 
     <string name="weather_sunny">&#xf00d;</string>
     <string name="weather_clear_night">&#xf02e;</string>
